# drag_and_drop_submission_workflow

./: README.md  generate_xml.py  metadata_submission.py  pyproject.toml  spreadsheet_parsing.py
output/logs/: submission_logs_170823-1028.txt  submission_logs_180823-2146.txt  submission_logs_200723-1330.txt  submission_logs_200723-1335.txt  submission_logs_200723-1423.txt  submission_logs_200723-1449.txt  submission_logs_200723-1454.txt  submission_logs_200723-1502.txt  submission_logs_200723-1504.txt  submission_logs_200723-1547.txt  submission_logs_210723-1150.txt  submission_logs_210723-1217.txt  submission_logs_210723-1222.txt  submission_logs_210723-1624.txt  submission_logs_210723-1629.txt  submission_logs_210723-1634.txt  submission_logs_210723-1635.txt  submission_logs_210723-1637.txt  submission_logs_220823-1024.txt  submission_logs_240723-1702.txt  submission_logs_250723-1040.txt  submission_logs_250723-1046.txt  submission_logs_250723-1140.txt  submission_logs_250723-1147.txt  submission_logs_250723-1307.txt  submission_logs_280723-1632.txt
output/output/: experimental_spreadsheet.xlsx
output/output/logs/: submission_logs_120823-1238.txt  submission_logs_120823-1246.txt  submission_logs_120823-1252.txt  submission_logs_120823-1355.txt  submission_logs_170823-1018.txt  submission_logs_170823-1021.txt  submission_logs_170823-1022.txt  (+39 more)
output/xml_archive/: sample.xml  study.xml  study_2023-08-05.xml  study_2023-08-09.xml  study_2023-08-19.xml  study_2023-08-20.xml  submission.xml  submission_2023-01-01.xml  submission_2023-08-05.xml  submission_2023-08-09 000000.xml  submission_2023-08-09.xml  submission_2023-08-19.xml  submission_2023-08-20.xml  submission_2023-10-01.xml
pipeline/modules/: bulk_webincli.nf  emailer.nf  metadata_submission.nf  transfer_integrity.nf
pipeline/subworkflow/: subworkflow.nf
scripts/: __init__.py  bulk_webincli.py  chr_list_generator.py  d_and_d_emailer.py  metadata_submission.py  spreadsheet_parsing.py  transfer_integrity_check.py
scripts/ena_drag_and_drop_submission_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
spreadsheets/: Notes_only_uploader_tool_metadata_v5_genome_assemblies.xlsx  Notes_only_uploader_tool_metadata_v5_raw_reads.xlsx  ~$Webin-59099.raw_reads_ENA_samples_upload_ONT_fastq.xlsx
(+2 files in other folders)
